syntax = "proto3";

package main;

option go_package = "github.com/inonsdn/gacha-system/proto/user;userpb";

service UserService {
  rpc Login (UserLoginRequest) returns (UserLoginResponse);
  rpc Register (RegistrationRequest) returns (RegistrationResponse);
}

message UserLoginRequest {
    string loginName = 1;
    string password = 2;
}

message UserLoginResponse {
    string jwtToken = 1;
    string error = 2;
}

message RegistrationRequest {
    string loginName = 1;
    string password = 2;
    string telNo = 3;
    string address = 4;
    string birthday = 5;
}

message RegistrationResponse {
    string userId = 1;
}
